Fixed cookie date parsing and overlay z-index

--- a/app/ui/css/components/response-pane.less
+++ b/app/ui/css/components/response-pane.less
@@ -13,7 +13,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 100;
+    z-index: 9;
     display: flex;
     flex-direction: column;
     align-items: center;
